--- a/pages/guitar/stringRecognition/stringRecognition.module.css
+++ b/pages/guitar/stringRecognition/stringRecognition.module.css
@@ -2,3 +2,11 @@
     width: 500px;
     margin: auto;
 }
+
+.center button {
+    background-color: darkred;
+    border-radius: 20px;
+    width: 150px;
+    height: 50px;
+    border: none;
+}
