--- a/pages/guitar/stringRecognition/stringRecognition.module.css
+++ b/pages/guitar/stringRecognition/stringRecognition.module.css
@@ -3,8 +3,13 @@
     margin: auto;
 }
 
+.center {
+    background-color: black;
+    color: aliceblue;
+}
+
 .center button {
-    background-color: darkred;
+    background-color: rgb(111, 0, 0);
     border-radius: 20px;
     width: 150px;
     height: 50px;
