--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,17 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: white;
+  background: black;
 }
 
 a {
-  color: inherit;
+  color: white;
   text-decoration: none;
+}
+
+Link {
+  color: white;
 }
 
 * {
@@ -20,8 +26,5 @@ a {
     color-scheme: dark;
   }
 
-  body {
-    color: white;
-    background: black;
-  }
+
 }
