made a new game find note on string for guitar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,12 +19,9 @@ Link {
 
 * {
   box-sizing: border-box;
+  color: white;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-
-
+button {
+  color: white;
 }
