made it look a little nicer with text styling and adding the header above the navbar

--- a/pages/guitar/chordRecognition/chordPatterns.module.css
+++ b/pages/guitar/chordRecognition/chordPatterns.module.css
@@ -7,7 +7,7 @@
 .buttons {
     height: 70px;
     width: 120px;
-    background-color: lightcoral;
+    background-color: rgb(96, 0, 0);
     border-radius: 20px;
     font-size: large;
 }
