--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,9 +16,8 @@
   background-color: rgb(127, 0, 0);
   border-radius: 5px;
   font-size: larger;
-  padding: 4px;
-  margin-top: 4px;
-
+  padding: 3px;
+  margin: 4px;
 }
 
 .buttonContainer {
