--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,3 +27,19 @@ button {
   background-color: rgb(0, 109, 130);
   height: 50px;
 }
+
+h1 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(255, 159, 159);
+}
+
+h2,
+h3 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(253, 255, 220);
+}
+
+p {
+  font-size: large;
+  color: rgb(253, 255, 220);
+}
