--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,7 +23,8 @@
 .buttonContainer {
   display: flex;
   justify-content: space-around;
-  padding: 10px;
+  padding: 1px;
+  margin-top: 0%;
 }
 
 .buttons {
