--- a/pages/guitar/noteRecognition/guitarNoteRecognition.module.css
+++ b/pages/guitar/noteRecognition/guitarNoteRecognition.module.css
@@ -2,15 +2,12 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    height: 110vh;
 }
 
 .topPart {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
-    height: 37%;
 }
 
 .topPart2 {
@@ -19,15 +16,13 @@
 }
 
 .buttonFill {
-    height: 15.3%;
+    height: 50px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
     grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
 }
 
-.bottomPart {
-    height: 650%;
-}
+.bottomPart {}
 
 .button {
     border: solid black;
