--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ Link {
 button {
   color: white;
   background-color: rgb(0, 109, 130);
-  height: 50px;
+  height: 66px;
 }
 
 h1 {
@@ -33,7 +33,11 @@ h1 {
   color: rgb(255, 159, 159);
 }
 
-h2,
+h2 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(169, 255, 255);
+}
+
 h3 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: rgb(253, 255, 220);
