--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -59,6 +59,7 @@
 
 .image3 {
   width: 80%;
+  height: auto;
 }
 
 .clickableImage {
@@ -169,4 +170,19 @@
 .padText {
   padding-left: 7%;
   padding-right: 7%;
+}
+
+.videoContainer {
+  position: relative;
+  width: 80%;
+  padding-top: 56.25%;
+  margin: 0 auto;
+}
+
+.videoContainer iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
