--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -30,8 +30,9 @@
 .buttons {
   height: 50px;
   width: 100px;
-  background-color: lightcoral;
-
+  background-color: rgb(101, 0, 0);
+  border: solid rgb(122, 98, 0);
+  border-radius: 10%;
 }
 
 .buttons:hover {
