messed with somne styling to make it nicer but also for it to look better on mobile with some glitches, mostly in the piano pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,8 @@ button {
   color: white;
   background-color: rgb(0, 109, 130);
   height: 66px;
+  border: solid rgb(44, 89, 104);
+  border-radius: 10%;
 }
 
 h1 {
