--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -81,12 +81,22 @@
 
 .video {
   width: 90%;
+
 }
 
 .flex {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+}
+
+.flex button {
+  border: solid rgb(44, 89, 104);
+  border-radius: 10%;
+}
+
+.flex button:hover {
+  background-color: black;
 }
 
 .flexColumn {
@@ -151,6 +161,8 @@
   margin-bottom: 10px;
   margin-left: 25%;
   margin-right: 25%;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .yellowButton {
@@ -177,6 +189,7 @@
   position: relative;
   width: 80%;
   padding-top: 56.25%;
+  max-width: 1280px;
   margin: 0 auto;
 }
 
