--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,12 +54,12 @@
 
 .image2 {
   object-fit: contain;
-  width: 100%;
-  height: 230px;
+  width: 85%;
+  height: auto;
 }
 
 .image3 {
-  width: 80%;
+  width: 40%;
   height: auto;
 }
 
@@ -80,8 +80,8 @@
 }
 
 .video {
-  width: 90%;
-
+  width: 80%;
+  height: 400px;
 }
 
 .flex {
