added to the practice page i think and organized more and added some things to their own pages instead of just having them on the practice overview page

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,12 +54,12 @@
 
 .image2 {
   object-fit: contain;
-  width: 85%;
+  width: 270px;
   height: auto;
 }
 
 .image3 {
-  width: 40%;
+  width: 270px;
   height: auto;
 }
 
