--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -272,3 +272,23 @@
   padding-bottom: 0px;
 
 }
+
+.formBtn {
+  width: 30%;
+  background-color: red;
+  border: solid white;
+  border-radius: 10%;
+  height: 30px;
+  font-weight: bolder;
+  font-size: large;
+}
+
+.formInput {
+  width: 30%;
+  background-color: red;
+  border: solid white;
+  border-radius: 10%;
+  height: 30px;
+  font-weight: bolder;
+  font-size: large;
+}
