--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,22 +32,22 @@ button {
 
 h1 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: rgb(255, 159, 159);
+  color: rgb(255, 98, 98);
 }
 
 h2 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: rgb(169, 255, 255);
+  color: rgb(153, 255, 153);
 }
 
 h3 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: rgb(255, 201, 121);
+  color: rgb(151, 250, 255);
 }
 
 p {
   font-size: large;
-  color: rgb(253, 255, 220);
+  color: #ffffff;
 }
 
 b {
