--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -41,8 +41,8 @@
 
 .leftAlign {
   text-align: left;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-left: 5%;
+  padding-right: 2%;
 
 }
 
@@ -208,7 +208,7 @@
 
 .donate {
   background: linear-gradient(to top, rgb(139, 0, 0), rgb(0, 0, 0));
-  border-radius: 20%;
+  border-radius: 5%;
   padding-top: 20px;
   padding-bottom: 1px;
   margin-left: 2%;
@@ -298,7 +298,7 @@
 }
 
 .highlightAndUnderline {
-  color: aqua;
+  color: gold;
   text-decoration: underline;
 }
 
@@ -328,7 +328,8 @@
 .indentOne {
   background-color: rgb(45, 25, 0);
   margin-left: 5%;
-  padding: 3%;
+
+  padding: 1px 3% 1px 3%;
 }
 
 .indentOne h3 {}
