--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,6 @@ body {
 }
 
 a {
-  color: white;
   text-decoration: none;
 }
 
@@ -56,6 +55,11 @@ b {
 }
 
 ul {
+  font-size: x-large;
+  padding: 3px;
+}
+
+ol {
   font-size: x-large;
   padding: 3px;
 }
