--- a/pages/method/guitar/noteRecognition/guitarNoteRecognition.module.css
+++ b/pages/method/guitar/noteRecognition/guitarNoteRecognition.module.css
@@ -57,3 +57,14 @@
     font-size: 60px;
     margin: 0%;
 }
+
+.resultsButtons {
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
+.resultsButtons button {
+    padding: 15px;
+    font-size: 20px;
+    border-radius: 0%;
+}
